fix collapsing inputs

--- a/public/style.css
+++ b/public/style.css
@@ -68,7 +68,8 @@ input {
 }
 
 .room-input {
-  width: 50%;
+  flex-wrap: nowrap;
+  width: 60%;
   margin: 0 auto;
   padding-top: 10px;
   padding-bottom: 10px;
